--- a/typescript/package.json
+++ b/typescript/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "ts-standard": "^10.0.0",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "standard": "^17.1.0"
   }
 }
